--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<label for="fileLoad" id="game">加载游戏</label>
 			<div id="load">读取</div>
 		</div>
+		<div class="title-name">小霸王其乐无穷</div>
 		<div class="screen">
 			<canvas id="nes" width="256" height="240"></canvas>
 		</div>
